2005-06-24  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GrampsBSDDB.py (upgrade): Disable upgrade_7 until this is
	properly working to not accidently destroy a database from gramps20

2005-06-20  Don Allingham  <don@gramps-project.org>
	* src/GenericFilter.py: optimize looping and reducing fetches
	* src/Utils.py: fix event handle accesses

2005-06-16  Alex Roitman  <shura@gramps-project.org>
	* src/EventEdit.py: Remove unused variable.

	* src/EventEdit.py: Hide warning message for new events and for
	existing events with the default role; Only commit new Event when
	OK clicked in the editor.
	* src/RelLib.py: Add assertions for external witness methods.
	* src/gramps.glade: Make warning easy to show/hide.

2005-06-15  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: fixed event type display
	* src/ReadXML.py: build child/family relationships properly on
	import, add missing event descriptions
	* src/RelLib.py: type checking for set_role relationship types

2005-06-15  Alex Roitman  <shura@gramps-project.org>
	* src/ListBox.py (EventListBox.set_place): Fix place setting.

2005-06-14  Alex Roitman  <shura@gramps-project.org>
	* src/events.png, src/repos.png, src/repos24.png: Add GNOME icons
	for the stock calendar and drawer.
	* src/events24.png: Update small icon.
	* src/gramps.glade: Use new icons for the Event View and
	Repository View side bar buttons. Add small icons to the main
	notebook tabs.

2005-06-08  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EditPerson.py: Make gender guessing work again

2005-06-08  Alex Roitman  <shura@gramps-project.org>
	* src/gramps_main.py (init_interface): Set proper color for new icons.
	* src/gramps.glade (gramps): Label new buttons, left-align labels.
	* src/GrampsDbBase.py (get_event_column_order): Show date column.
	* src/EventView.py (Module): Add "Last Changed" column; do not
	hard-code handle column.
	* src/DisplayModels.py (EventModel.__init__): Switch column order.
